# testtt

./: .gitignore  README.md
apps/nemacui/: CMakeLists.txt  NemacUIConfig.cmake.in  README.md
apps/nemacui/src/: CMakeLists.txt  nemacui.cpp  nemacui.h  nemacui.qrc  newiconitem.cpp  newiconitem.h  thememanager.cpp  thememanager.h
apps/nemacui/src/controls/: AboutDialog.qml  ActionTextField.qml  BusyIndicator.qml  DesktopMenu.qml  Dialog.qml  Icon.qml  PopupTips.qml  RoundImageButton.qml  RoundedRect.qml  TabBar.qml  TabButton.qml  TabCloseButton.qml  TabView.qml  TextField.qml  Theme.qml  Toast.qml  Units.qml  Window.qml  qmldir
apps/nemacui/src/desktop/: menupopupwindow.cpp  menupopupwindow.h  platformmenu.cpp
apps/nemacui/src/fish-style/: Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  Frame.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  RadioButton.qml  RadioDelegate.qml  RadioIndicator.qml  ScrollBar.qml  Slider.qml  Switch.qml  SwitchIndicator.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolTip.qml
apps/screenshot/: .gitignore  CMakeLists.txt  README.md  nemac-screenshot.desktop
apps/screenshot/qml/: ImageButton.qml  main.qml
apps/screenshot/src/: main.cpp  screenshotview.cpp  screenshotview.h
apps/settings/: CMakeLists.txt  README.md  nemac-settings.desktop
apps/settings/src/: about.cpp  about.h  appearance.cpp  appearance.h  application.cpp  background.cpp  background.h  battery.cpp  battery.h  brightness.cpp  brightness.h  cicontheme.cpp  cicontheme.h  com.nemac.SettingsUI.xml  cscreenmanager.cpp  defaultapplications.cpp  defaultapplications.h  fontsmodel.cpp  fontsmodel.h  language.cpp  language.h  main.cpp  networkproxy.cpp  notifications.cpp  notifications.h  powermanager.cpp  powermanager.h  touchpad.cpp  touchpad.h
apps/settings/src/cursor/: cursorthememodel.cpp  cursorthememodel.h  mouse.cpp  mouse.h
apps/settings/src/datetime/: time.cpp  time.h  timedated_interface.cpp  timedated_interface.h  timezonemap.cpp  timezonemap.h
apps/settings/src/fonts/: fonts.cpp  fonts.h  kxftconfig.cpp
apps/settings/src/qml/: BluetoothPage.qml  Hideable.qml  HorizontalDivider.qml  IconButton.qml  IconCheckBox.qml  ItemPage.qml  LanguagePage.qml  RoundedItem.qml  Scrollable.qml  SideBar.qml  StandardButton.qml  StandardItem.qml  main.qml
apps/texteditor/: .gitignore  CMakeLists.txt  README.md  nemac-editor.desktop
apps/texteditor/qml/: TextEditor.qml  main.qml
apps/texteditor/src/: documenthandler.cpp  documenthandler.h  main.cpp
core/core/cpufreq/: CMakeLists.txt  com.nemac.cpufreq.pkexec.policy.in  main.cpp
core/core/gmenuproxy/: CMakeLists.txt  actions.cpp  dbusmenuadaptor.cpp  dbusmenuadaptor.h  menuproxy.cpp  nemac-gmenuproxy.service.in
core/core/notificationd/: CMakeLists.txt  application.cpp  application.h  com.nemac.Notification.xml  historymodel.cpp  historymodel.h  main.cpp  notification.cpp  notification.h  notificationpopup.cpp  notificationpopup.h  notificationserver.cpp  notificationserver.h  notificationsmodel.cpp  notificationsmodel.h  notificationwindow.cpp  notificationwindow.h  screenhelper.cpp  screenhelper.h  settings.cpp  settings.h  utils.cpp  utils.h  view.cpp
core/core/notificationd/dbus/: notificationsadaptor.cpp  notificationsadaptor.h
core/core/notificationd/qml/: IconButton.qml  NotificationWindow.qml  QmlNotificationPopup.qml  main.qml
core/core/screen-brightness/: CMakeLists.txt  brightnesshelper.cpp  brightnesshelper.h  com.nemac.brightness.pkexec.policy.in  main.cpp
core/core/settings-daemon/: CMakeLists.txt  application.cpp  application.h  dbusadaptor.h  main.cpp
core/core/settings-daemon/battery/: battery.cpp  com.nemac.PrimaryBattery.xml
core/core/settings-daemon/brightness/: brightnessmanager.cpp  brightnessmanager.h  com.nemac.Brightness.xml
core/core/settings-daemon/dock/: com.nemac.Dock.xml  dock.cpp  dock.h
core/core/settings-daemon/language/: com.nemac.Language.xml  language.cpp  language.h
core/core/settings-daemon/mouse/: com.nemac.Mouse.xml  libinputsettings.cpp  mousemanager.cpp  mousemanager.h
core/core/settings-daemon/theme/: com.nemac.Theme.xml  thememanager.cpp  thememanager.h
core/core/settings-daemon/touchpad/: com.nemac.Touchpad.xml
core/core/shutdown-ui/: CMakeLists.txt  IconButton.qml  actions.cpp  actions.h  main.cpp  main.qml
core/libnemac/accounts/: CMakeLists.txt  qmldir
core/libnemac/networkmanagement/: CMakeLists.txt  activeconnection.cpp  activeconnection.h  appletproxymodel.cpp  appletproxymodel.h  configuration.cpp  handler.cpp  networkmodel.cpp  networkmodelitem.cpp  qmldir  uiutils.cpp  wifisettings.cpp
core/libnemac/system/: CMakeLists.txt  qmldir  wallpaper.cpp
plugins/kwin-plugins/: CMakeLists.txt  README.md
plugins/kwin-plugins/config/: kwinrc  kwinrulesrc
plugins/kwin-plugins/plugins/: CMakeLists.txt
plugins/kwin-plugins/plugins/decoration/: CMakeLists.txt  button.cpp  decoration.cpp  decoration.h  nemacde.json
plugins/kwin-plugins/plugins/roundedwindow/: CMakeLists.txt  roundedwindow.cpp  roundedwindow.h
plugins/kwin-plugins/scripts/nemac_popups/: metadata.desktop  metadata.json
plugins/kwin-plugins/scripts/nemac_scale/: metadata.desktop  metadata.json
plugins/qt-plugins/widgetstyle/: CMakeLists.txt  basestyle.cpp  nemacstyle.json  pstyleplugin.cpp  pstyleplugin.h  shadowhelper.cpp  shadowhelper.h
tools/: installer.sh  (+5 more)
ui/statusbar/: CMakeLists.txt
ui/statusbar/qml/: CardItem.qml  ControlCenter.qml  IconButton.qml  MprisItem.qml  ShutdownDialog.qml  StandardCard.qml  StandardItem.qml  SystemTray.qml  main.qml
ui/statusbar/src/: activity.cpp  activity.h  appearance.cpp  appearance.h  backgroundhelper.cpp  backgroundhelper.h  battery.cpp  battery.h  brightness.cpp  brightness.h  capplications.cpp  capplications.h  com.nemac.Statusbar.xml  controlcenterdialog.cpp  controlcenterdialog.h  main.cpp  notifications.cpp  notifications.h  poweractions.cpp  poweractions.h  processprovider.cpp  processprovider.h  statusbar.cpp  statusbar.h  volume.cpp  volume.h
(+349 files in other folders)
